<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/passcodelock_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="32dp"
    >

    <TextView
        android:id="@+id/passcodelock_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="SET PASSCODE"
        android:textColor="@color/passcodelock_prompt_text_color"
        android:textSize="20sp"></TextView>

    <LinearLayout
        android:id="@+id/AppUnlockLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/passcodelock_prompt"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pin_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/passcodelock_hint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:letterSpacing="0.3"
            android:maxLength="4"
            android:textColorHint="#000000"
            android:textSize="25dp"

            ></TextView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/passcodelock_divider"></View>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/button1"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_1"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button2"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_2"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button3"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_3"
                    android:textColor="#ffffff"></Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button4"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_4"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button5"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_5"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button6"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_6"
                    android:textColor="#ffffff"></Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button7"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_7"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button8"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_8"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/button9"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_9"
                    android:textColor="#ffffff"></Button>

            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/image_fingerprint"
                    style="@style/PasscodeKeyboardImageStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:contentDescription="@string/passcode_description_fingerprint"
                    android:focusable="false"

                    android:scaleType="centerInside"
                    android:visibility="invisible"></ImageButton>

                <Button
                    android:id="@+id/button0"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_0"
                    android:textColor="#ffffff"></Button>

                <ImageButton
                    android:id="@+id/button_erase"
                    style="@style/PasscodeKeyboardImageStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/passcode_description_delete"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_backspace_white_24dp"></ImageButton>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>